Added basic json loading

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
     "restructuredtext.confPath": "",
     "cSpell.words": [
+        "codecov",
+        "httpd",
+        "webroot",
+        "webstack",
         "wsgi",
+        "wsgiref",
         "wstack"
     ]
 }
