--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,6 @@ skip_missing_interpreters = True
 deps =
         flake8
         pytest
-	#--editable=file:///{toxinidir}/../dinterpol
 commands =
         flake8
         {envpython} -m pytest -x -v {env:VERBOSE_TEST:} wstack tests/
@@ -14,4 +13,4 @@ commands =
 [flake8]
 max-line-length = 120
 max-complexity = 10
-exclude = .tox, .git, __pycache__
+exclude = docs/*,testdoc/*,.git,__pycache__,.tox,.eggs,*.egg
